# indeed-mcp

./: .gitignore  AGENTS.md  Cargo.toml  README.md
src/: indeed.rs  main.rs  oauth.rs
