[package]
name = "indeed-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server for Indeed Job Search — search jobs and get detailed postings via natural language"
license = "MIT"
keywords = ["mcp", "indeed", "jobs", "search", "ai", "modelcontextprotocol"]
repository = "https://github.com/awdemos/indeed-mcp"
homepage = "https://kvcachestore.com"

[[bin]]
name = "indeed-mcp"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
open = "5"
rand = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rmcp = { version = "=1.1.0", features = ["server", "macros", "transport-io"] }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
